--- a/FrontEnd/eRural/src/index.html
+++ b/FrontEnd/eRural/src/index.html
@@ -5,7 +5,7 @@
   <title>ERural</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/vEJY0PZ.png">
 </head>
 <body>
   <app-root></app-root>
