--- a/FrontEnd/eRural/src/index.html
+++ b/FrontEnd/eRural/src/index.html
@@ -13,4 +13,5 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="//code.tidio.co/mtipatdbbbhcmlqd7gfqr9gii222qery.js" async></script>
 </html>
